# logger_idf

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  MIGRATION.md  README.md  blackbox.c  blackbox.h  blackbox_formats.h  blackbox_messages.h  idf_component.yml  tofo.md
core/: blackbox_core.c  blackbox_encoder.h  blackbox_messages.h  blackbox_ringbuf.h  blackbox_types.h
examples/: README.md
examples/ardupilot_spiffs_example/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/ardupilot_spiffs_example/main/: idf_component.yml  main.c
examples/encryption_example/: CMakeLists.txt  sdkconfig.defaults
examples/encryption_example/main/: main.c
examples/flight_data_example/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/flight_data_example/main/: CMakeLists.txt  idf_component.yml  main.c
examples/hal_example/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/linux/: Makefile  README.md  ardupilot_pid  ardupilot_pid.c  basic_logging  basic_logging.c  flight_data  flight_data.c  multi_format  multi_format.c  single_threaded  single_threaded.c
examples/panic_example/: CMakeLists.txt  README.md
examples/px4_spiffs_example/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/sdcard_example/: CMakeLists.txt  sdkconfig.defaults
examples/spiffs_example/: CMakeLists.txt  sdkconfig.defaults
hal/: blackbox_hal.h  blackbox_hal_esp.c  blackbox_hal_esp.h  blackbox_hal_posix.c  blackbox_hal_posix.h  blackbox_hal_template.c
include/: blackbox.h
tools/: README.md  blackbox_decoder.py
(+8 files in other folders)
